16/16.txt
1. Yifan Wang 488500

2.

  t.cpp:29:18: error: ambiguous template specialization 'fun<>' for 'void fun(std::ostream&, const string&)'
   template <> void fun (std::ostream& os, const std::string& s){
                    ^~~
   Here the reason causing the compiled error is that there are multiple candidates for the string instantiation template.
   The compiler is not able to figure out which to use.

3.
output:
  6
  Class "string" char * 1 1.2 "string 2" Argument pack size is 112

Non-template:
     void fun (std::ostream& os, const std::string& s){
        os<<"\""<<s<<"\" ";
    }

template:
    template <typename... Args> void fun (std::ostream& os, const std::string& s, const Args&...rest){
        os<<"\""<<s<<"\" ";
        fun(os,rest...);
    }
4.

    7
    Class "string" [char * 0x403335]1 1.2 "string 2" [char * c2 0x403345]Argument pack size is 120

5.

    8
    {Class 0x7ffedf789fc0}"string" [char * 0x403525]1 1.2 "string 2" [char * c2 0x403535]{Class 2 0x7ffedf789f40}Argument pack size is 152

6.